Fixed spacing for help page

--- a/help.css
+++ b/help.css
@@ -17,7 +17,7 @@ ul {
   }
 
   .blank {
-    style:none;
+    style: none;
     border:none;
   }
 
@@ -29,7 +29,7 @@ ul {
   .help-page {
     display:flex;
     /* width:100%; */
-    height:calc(100% - 180px);
+    height: calc(100vh - 250px);
     flex-direction: row;
     /* align-items: center; */
     /* align-self: center; */
@@ -111,6 +111,7 @@ ul {
   .bottom-info-container {
     display:flex;
     flex:row;
+    height: 70px;
     justify-content: space-evenly;
     align-items: flex-end;
     /* background-color: blue; */
